buildscript {
	ext {
		springBootVersion = '2.0.0.RELEASE'
	}
	repositories {
		mavenCentral()
	}
	dependencies {
		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
	}
}

apply plugin: 'java'
apply plugin: 'eclipse'
apply plugin: 'org.springframework.boot'
apply plugin: 'io.spring.dependency-management'

group = 'io.fun'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = 1.8

repositories {
	mavenCentral()
	maven { url "https://repo.spring.io/milestone" }
}


ext {
	springCloudVersion = 'Finchley.M9'
}

dependencies {
	compile('org.springframework.boot:spring-boot-starter-web')
	compile('org.springframework.cloud:spring-cloud-starter-oauth2')
//	compile group: 'io.pivotal.spring.cloud', name: 'spring-cloud-sso-connector', version: '2.1.2.RELEASE'

//	compile group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.0'
	testCompile('org.springframework.boot:spring-boot-starter-test')
}

dependencyManagement {
	imports {
		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
	}
}

//compileJava {
//	options.compilerArgs += ["--add-modules", "java.xml.bind"]
//}
//
//compileTestJava {
//	options.compilerArgs += ["--add-modules", "java.xml.bind"]
//}
//
//test {
//	jvmArgs += ["--add-modules", "java.xml.bind"]
//}